# grapefruit

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  vercel.json
.claude/: settings.json
.github/workflows/: deploy-jobs.yml  pulumi-up.yml
backend/grapefruit/: alpaca_client.py  bars.py  candidates.py  catalyst.py  config.py  detector.py  eodhd_client.py  jobs.py  main.py  metadata.py  news.py  rate_limit.py  screening.py  storage.py  strategy_alignment.py  universe.py
backend/grapefruit/api/: routes_candidates.py  routes_jobs.py  routes_scan.py  routes_tickers.py
backend/grapefruit/pipelines/: __init__.py  __main__.py  compute_strategy_tags.py  detect_step_changes.py  detect_watchlist_moves.py  detect_winners.py  enrich_catalysts.py  migrate_historical_data.py  refresh_bars.py  refresh_company_metrics.py  refresh_fundamentals.py  refresh_sectors.py  refresh_universe.py  refresh_upcoming_events.py  refresh_watchlist.py  scan_forward_catalysts.py  scan_tier1_biotech_catalysts.py  scan_tier1_spinoffs.py  scan_tier2_earnings_contracts.py  weekly.py  (+2 more)
backend/tests/: test_detector.py  test_screening.py  test_storage.py
cloud/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  supabase.ts  types.ts  utils.ts
infra/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
supabase/migrations/: 0001_redesign.sql  0002_assets_fks.sql  0003_lookahead.sql  0004_watchlist_moves.sql  0005_strategy_tags.sql  0006_catalyst_tiers.sql  0007_universe_wide_data.sql  0008_cleanup_legacy_tables.sql  0009_drop_legacy_tables.sql  0010_remove_insider_columns.sql
(+19 files in other folders)
